--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "8.2.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "expo": "~45.0.0",
+    "expo-image-picker": "~13.1.1",
+    "expo-permissions": "~13.2.0",
     "expo-status-bar": "~1.3.0",
     "firebase": "^7.9.0",
     "react": "17.0.2",
