--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "expo": "~45.0.0",
+    "expo-camera": "~12.2.0",
     "expo-image-picker": "~13.1.1",
+    "expo-location": "~14.2.2",
     "expo-permissions": "~13.2.0",
     "expo-status-bar": "~1.3.0",
     "firebase": "^7.9.0",
@@ -26,6 +28,7 @@
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-gifted-chat": "^1.0.2",
+    "react-native-maps": "0.30.2",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
